@@ -258,7 +258,7 @@ struct logical_volume {
 };
 
 struct snapshot {
-	struct id id;
+	union lvid lvid;
 
 	int persistent;		/* boolean */
 	uint32_t chunk_size;	/* in 512 byte sectors */
@@ -508,7 +508,7 @@ struct snapshot *find_origin(const struct logical_volume *lv);
 struct list *find_snapshots(const struct logical_volume *lv);
 
 int vg_add_snapshot(struct logical_volume *origin, struct logical_volume *cow,
-		    int persistent, struct id *id, uint32_t extent_count,
+		    int persistent, union lvid *lvid, uint32_t extent_count,
 		    uint32_t chunk_size);
 
 int vg_remove_snapshot(struct volume_group *vg, struct logical_volume *cow);
